--- a/cron-ticker/Dockerfile
+++ b/cron-ticker/Dockerfile
@@ -1,33 +1,27 @@
-# BUILDX
-# docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 \
-#    -t klerith/cron-ticker:latest --push .
-
-# /app /usr /lib
-# FROM --platform=linux/amd64 node:22.12.0-alpine3.21
-# FROM --platform=$BUILDPLATFORM node:22.12.0-alpine3.21
-FROM node:22.12.0-alpine3.21
-
-# cd app
-WORKDIR  /app
-
-# Dest /app
+# Dependencias de desarrollo
+FROM node:19.2-alpine3.16 as deps
+WORKDIR /app
 COPY package.json ./
-
-# Instalar las dependencias
 RUN npm install
-
-# Dest /app
+ 
+ 
+# Build y Tests
+FROM node:19.2-alpine3.16 as builder
+WORKDIR /app
+COPY --from=deps /app/node_modules ./node_modules
 COPY . .
-
-# Realizar testing
 RUN npm run test
-
-# Eliminar archivos y directorios no necesarios en PROD
-RUN rm -rf tests && rm -rf node_modules
-
-# Unicamente las dependencias de prod
+ 
+# Dependencias de Producción
+FROM node:19.2-alpine3.16 as prod-deps
+WORKDIR /app
+COPY package.json ./
 RUN npm install --prod
-
-
-# Comando run de la imagen
+ 
+# Ejecutar la APP
+FROM node:19.2-alpine3.16 as runner
+WORKDIR /app
+COPY --from=prod-deps /app/node_modules ./node_modules
+COPY app.js ./
+COPY tasks/ ./tasks
 CMD [ "node", "app.js" ]
